# documents-merger

./: Makefile  README.md  pyproject.toml
document_hundler/: __init__.py  app.py  save_and_validate.py
document_hundler/excel_hundler/: combine_excel.py
document_hundler/excel_hundler/output_file/: merged_file.xlsx
document_hundler/pdf_hundler/: combine_pdf.py
document_hundler/templates/: 404.html  base_template.html  excel.html  index.html  pdf.html
documents_merger/: __init__.py  app.py  validate.py
documents_merger/excel_merger/: combine_excel.py
documents_merger/pdf_merger/: combine_pdf.py
documents_merger/templates/: base_template.html  excel.html  index.html  pdf.html
