[tool.poetry]
name = "documents-merger"
version = "0.1.0"
description = "Documents Merger is the application that allows you to merge multiple files in the same format (Excel or PDF) into one file"
authors = ["KsyushaKI <oksanaakadem39@gmail.com>"]
readme = "README.md"
packages = [{include = "documents_merger"}]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.0.2"
Flask = "^2.3.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
PyPDF2 = "^3.0.1"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
